k8s-manifests/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      name: myapp1-pod
      labels:
        app: myapp1
    spec:
      containers:
        - name: myapp1-container
          image: 063965251904.dkr.ecr.us-east-1.amazonaws.com/nginx-app:105
          ports:
            - containerPort: 80
