k8s-manifests/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-lb-service
spec:
  selector:
    app: myapp1
  ports:
    - name: http
      port: 8080
      targetPort: 80
