k8s-manifests/clb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-lb-service
spec:
  type: LoadBalancer # ClusterIp, # NodePort
  selector:
    app: myapp1
  ports:
    - name: http
      port: 80 # Service Port
      targetPort: 80 # Container Port
