k8s-manifests/nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-nodeport-service
spec:
  type: NodePort # ClusterIp, # NodePort, #LoadBalancer
  selector:
    app: myapp1
  ports:
    - name: http
      port: 8080 # Service Port
      targetPort: 80 # Container Port
      nodePort: 31280 # Node Port
