k8s-manifests/app.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app1
  labels:
    app: app1
spec:
  containers:
    - name: my-app1
      image: 063965251904.dkr.ecr.us-east-1.amazonaws.com/nginx-app:91
      volumeMounts:
        - name: html-volume
          mountPath: /var/www/html
  volumes:
    - name: html-volume
      emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: my-app1-service
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: my-app1-service
                port:
                  number: 8080
